--- a/backend/src/WebApi/appsettings.json
+++ b/backend/src/WebApi/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ImmunisationDashboard;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  "Jwt": {
+    "Key": "ThisIsAVerySecretKeyForDevelopmentPurposesOnly12345!",
+    "Issuer": "ImmunisationDashboardAPI",
+    "Audience": "ImmunisationDashboardClients",
+    "ExpiresInHours": 1
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
